--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ terraform/terraform.tfvars
 # !/deployment/handlers/.gitkeep
 
 assets/REPORT.md
+assets/PLAN.md
 
 # ------------------ Template gitignore ---------------------
 # Byte-compiled / optimized / DLL files
