--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 python-dotenv # ==1.0.0
 pg8000 # ==1.30.3
 pytest # ==7.4.3
-pytest-testdox
-boto3
-moto[all]
-awswrangler
-pandas
-pytest-cov
-flake8
-black
-bandit
-pip-audit
+pytest-testdox #==3.1.0
+boto3 #==1.39.3
+moto[all] #==5.1.6
+awswrangler # ==3.12.1
+pandas #==2.3.0
+pytest-cov #==6.2.1
+flake8 #==7.3.0
+black #==25.1.0
+bandit #==1.8.5
+pip-audit #==2.9.0
